Moved common code/classes to class libraries

--- a/src/IdManagement/Views/Shared/_LoginPartial.cshtml
+++ b/src/IdManagement/Views/Shared/_LoginPartial.cshtml
@@ -1,5 +1,5 @@
 ﻿@using Microsoft.AspNetCore.Identity
-@using IdManagement.Models
+@using IdentityCommon
 
 @inject SignInManager<ApplicationUser> SignInManager
 @inject UserManager<ApplicationUser> UserManager
