Moved User Account Management from ManageController  to AccountController

--- a/src/IdManagement/Views/Account/ChangePassword.cshtml
+++ b/src/IdManagement/Views/Account/ChangePassword.cshtml
@@ -1,4 +1,4 @@
-﻿@model IdManagement.Models.ManageViewModels.ChangePasswordViewModel
+﻿@model IdManagement.Models.AccountViewModels.ChangePasswordViewModel
 
 @{
     ViewData["Title"] = "Change Password";
@@ -6,7 +6,7 @@
 }
 
 <h2>@ViewData["Title"].</h2>
-<form asp-controller="Manage" asp-action="ChangePassword" method="post" class="form-horizontal" role="form">
+<form asp-controller="Account" asp-action="ChangePassword" method="post" class="form-horizontal" role="form">
     <h5 class="alert alert-info">After clicking the "Change Password" button, you will be logged out of the application.</h5>
     <h5 class="alert alert-info">You will have to log back in using the new password.</h5>
     <hr />
