--- a/src/IdManagement/Views/Account/EnableAuthenticator.cshtml
+++ b/src/IdManagement/Views/Account/EnableAuthenticator.cshtml
@@ -1,4 +1,4 @@
-﻿@model IdManagement.Models.ManageViewModels.EnableAuthenticatorViewModel
+﻿@model IdManagement.Models.AccountViewModels.EnableAuthenticatorViewModel
 @{
     ViewData["Title"] = "Enable authenticator";
 }
