--- a/src/IdManagement/Views/Account/ShowCodes.cshtml
+++ b/src/IdManagement/Views/Account/ShowCodes.cshtml
@@ -43,7 +43,7 @@
 
     </div>
     <hr />
-    <p><a asp-controller="Manage" asp-action="Index">Back to Manage Account page</a></p>
+    <p><a asp-controller="Account" asp-action="Index">Back to Manage Account page</a></p>
 </div>
 
 @section Scripts {
