--- a/src/IdManagement/Views/Shared/_Nav.cshtml
+++ b/src/IdManagement/Views/Shared/_Nav.cshtml
@@ -79,7 +79,7 @@
                                         <a href="#" class="nav-link dropdown-toggle text-light" data-toggle="dropdown">@name <b class="caret"></b></a>
 
                                         <div class="dropdown-menu">
-                                            <a class="dropdown-item text-dark" asp-action="Index" asp-controller="Manage">Manage Account</a>
+                                            <a class="dropdown-item text-dark" asp-action="Index" asp-controller="Account">Manage Account</a>
                                             <a class="dropdown-item text-dark" asp-action="Logout" asp-controller="Account">Logout</a>
                                         </div>
 
