--- a/src/IS4/Views/Account/Login.cshtml
+++ b/src/IS4/Views/Account/Login.cshtml
@@ -49,7 +49,7 @@
                             <button class="btn btn-primary" name="button" value="login">Login</button>
                             <button class="btn btn-secondary" name="button" value="cancel">Cancel</button>
                             <p>
-                                <a asp-protocol="https" asp-host="@idManagementHost" asp-controller="Manage" asp-action="ForgotPassword">Forgot your password?</a>
+                                <a asp-protocol="https" asp-host="@idManagementHost" asp-controller="Account" asp-action="ForgotPassword">Forgot your password?</a>
                             </p>
                         </form>
                     </div>
