--- a/src/IdManagement/Views/Account/ForgotPassword.cshtml
+++ b/src/IdManagement/Views/Account/ForgotPassword.cshtml
@@ -1,4 +1,4 @@
-﻿@model IdManagement.Models.ManageViewModels.ForgotPasswordViewModel
+﻿@model IdManagement.Models.AccountViewModels.ForgotPasswordViewModel
 @{
     ViewData["Title"] = "Forgot Your Password";
     Layout = "~/Views/Shared/_Layout.cshtml";
@@ -10,7 +10,7 @@
 {
     <p class="alert alert-warning">@TempData["StatusMessage"].ToString()</p>
 }
-<form asp-controller="Manage" asp-action="ForgotPassword" method="post" class="form-horizontal" role="form">
+<form asp-controller="Account" asp-action="ForgotPassword" method="post" class="form-horizontal" role="form">
     <h4>Enter your email.</h4>
     <hr />
     <div asp-validation-summary="All" class="text-danger"></div>
