--- a/src/IdManagement/Views/Account/ResetPassword.cshtml
+++ b/src/IdManagement/Views/Account/ResetPassword.cshtml
@@ -1,4 +1,4 @@
-﻿@model IdManagement.Models.ManageViewModels.ResetPasswordViewModel
+﻿@model IdManagement.Models.AccountViewModels.ResetPasswordViewModel
 @{
     ViewData["Title"] = "Reset Password";
     Layout = "~/Views/Shared/_Layout.cshtml";
@@ -6,7 +6,7 @@
 
 <h1>@ViewData["Title"].</h1>
 
-<form asp-controller="Manage" asp-action="ResetPassword" method="post" class="form-horizontal" role="form">
+<form asp-controller="Account" asp-action="ResetPassword" method="post" class="form-horizontal" role="form">
     <h4>Reset your password.</h4>
     <hr />
     <div asp-validation-summary="All" class="text-danger"></div>
