--- a/src/IdManagement/Views/Account/SetPassword.cshtml
+++ b/src/IdManagement/Views/Account/SetPassword.cshtml
@@ -1,4 +1,4 @@
-﻿@model IdManagement.Models.ManageViewModels.SetPasswordViewModel
+﻿@model IdManagement.Models.AccountViewModels.SetPasswordViewModel
 @{
     ViewData["Title"] = "Set Password";
     Layout = "~/Views/Shared/_Layout.cshtml";
@@ -9,7 +9,7 @@
     account so you can log in without an external login.
 </p>
 
-<form asp-controller="Manage" asp-action="SetPassword" asp-route-returnurl="@ViewData["ReturnUrl"]" method="post" class="form-horizontal" role="form">
+<form asp-controller="Account" asp-action="SetPassword" asp-route-returnurl="@ViewData["ReturnUrl"]" method="post" class="form-horizontal" role="form">
     <h4>Set your password</h4>
     <hr />
     <div asp-validation-summary="All" class="text-danger"></div>
