--- a/src/IdManagement/Views/Account/Index.cshtml
+++ b/src/IdManagement/Views/Account/Index.cshtml
@@ -4,8 +4,9 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>@ViewData["Title"].</h1>
+<h2>@ViewData["Title"].</h2>
 <p class="text-success">@TempData["StatusMessage"]</p>
+<p class="text-danger">@TempData["ErrorMessage"]</p>
 <dl class="dl-horizontal">
     <dt>User Name</dt>
     <dd>@Model.Username</dd>
