--- a/src/IdManagement/Views/Account/PhoneNumber.cshtml
+++ b/src/IdManagement/Views/Account/PhoneNumber.cshtml
@@ -10,7 +10,7 @@
         <div class="form-group">
             <label asp-for="PhoneNumber" class="col-md-2 control-label"></label>
             <div class="col-md-10">
-                <input asp-for="PhoneNumber" class="form-control" />
+                <input asp-for="PhoneNumber" class="form-control" placeholder="Valid Format: (222) 222-2222, or 222-222-2222" />
                 <span asp-validation-for="PhoneNumber" class="text-danger"></span>
             </div>
         </div>
