Add MainClient, linking from IdManagement Client to MainClient. User can now navigate to and from both client apps

--- a/src/IdManagement/Views/Developer/Secure.cshtml
+++ b/src/IdManagement/Views/Developer/Secure.cshtml
@@ -1,7 +1,4 @@
-﻿
-@* EXAMPLE FROM: https://github.com/IdentityModel/IdentityModel.AspNetCore/blob/main/samples/TokenManagement3/Views/Home/Secure.cshtml*@
-
-@using Microsoft.AspNetCore.Authentication
+﻿@using Microsoft.AspNetCore.Authentication
 @{
     ViewData["Title"] = "Secure";
     Layout = "~/Views/Shared/_Layout.cshtml";
