--- a/src/IdManagement/Views/Shared/_Nav.cshtml
+++ b/src/IdManagement/Views/Shared/_Nav.cshtml
@@ -65,7 +65,8 @@
 
                                         <a class="dropdown-item text-dark" asp-controller="Developer" asp-action="CallApiAsClient">Call Api As Client</a>
 
-                                        <a class="dropdown-item text-dark" asp-controller="healthz">Application Health</a>
+                                        @*<a class="dropdown-item text-dark" asp-controller="healthz">Application Health</a>*@
+                                        <a class="dropdown-item text-dark" asp-controller="Developer" asp-action="Healthz">Application Health</a>
 
                                     </div>
                                 </li>
