Changed how User navigates back to MainClient

--- a/src/IdManagement/Views/Shared/_Nav.cshtml
+++ b/src/IdManagement/Views/Shared/_Nav.cshtml
@@ -8,6 +8,7 @@
         name = Context.User?.GetDisplayName();
     }
     string mainClientUrl = Configuration["AppURLS:MainClientBaseUrl"];
+    //string mainClientUrl = "https://localhost:5001/Account/Login?returnUrl=https://localhost:443/callback.html";
 }
 
 <div class="nav-page">
