--- a/src/IS4/Views/Account/Login.cshtml
+++ b/src/IS4/Views/Account/Login.cshtml
@@ -47,7 +47,7 @@
                                 </div>
                             }
                             <button class="btn btn-primary" name="button" value="login">Login</button>
-                            <button class="btn btn-secondary" name="button" value="cancel">Cancel</button>
+                            @*<button class="btn btn-secondary" name="button" value="cancel">Cancel</button>*@
                             <p>
                                 <a asp-protocol="https" asp-host="@idManagementHost" asp-controller="Account" asp-action="ForgotPassword">Forgot your password?</a>
                             </p>
