--- a/src/IS4/Views/Shared/_Nav.cshtml
+++ b/src/IS4/Views/Shared/_Nav.cshtml
@@ -1,5 +1,6 @@
 ﻿@using IdentityServer4.Extensions
-
+@using Microsoft.Extensions.Configuration
+@inject IConfiguration Configuration
 @{
     string name = null;
     if (!true.Equals(ViewData["signed-out"]))
@@ -11,9 +12,9 @@
 <div class="nav-page">
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
 
-        <a href="~/" class="navbar-brand">
+        <a href="@Configuration["AppURLS:MainClientBaseUrl"]" class="navbar-brand">
             <img src="~/icon.png" class="icon-banner">
-            IdentityServer4
+            SystemsDesign.rocks
         </a>
 
         @if (!string.IsNullOrWhiteSpace(name))
@@ -21,13 +22,13 @@
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item dropdown">
                     <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">@name <b class="caret"></b></a>
-                    
+
                     <div class="dropdown-menu">
                         <a class="dropdown-item" asp-action="Logout" asp-controller="Account">Logout</a>
                     </div>
-              </li>
+                </li>
             </ul>
         }
-    
+
     </nav>
 </div>
